[package]
name = "cuda-edge-runtime"
version = "0.1.0"
edition = "2021"
description = "Edge runtime — trust engine, reflex actions, fleet coordination, built on cuda-equipment"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-edge-runtime"

[dependencies]
cuda-equipment = { path = "../cuda-equipment" }
